hphp/hack/test/typecheck/new_inference/apply_with_call.php.like_types.exp
File "apply_with_call.php", line 16, characters 26-27:
Invalid argument (Typing[4323])
File "apply_with_call.php", line 9, characters 14-15:
Some type constraint(s) are violated here
File "apply_with_call.php", line 9, characters 14-15:
Tu is a constrained type parameter
File "apply_with_call.php", line 13, characters 18-18:
Expected C
File "apply_with_call.php", line 9, characters 14-15:
But got dynamic
File "apply_with_call.php", line 17, characters 26-27:
Invalid argument (Typing[4323])
File "apply_with_call.php", line 11, characters 18-19:
Some type constraint(s) are violated here
File "apply_with_call.php", line 11, characters 18-19:
Tu is a constrained type parameter
File "apply_with_call.php", line 13, characters 18-18:
Expected C
File "apply_with_call.php", line 11, characters 18-19:
But got dynamic
